[project]
name = "docile-benchmark"
version = "0.3.4"
description = "Tools to work with the DocILE dataset and benchmark"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
    { name = "Stepan Simsa", email = "stepan.simsa@rossum.ai" },
    { name = "Matyas Skalicky", email = "matyas.skalicky@rossum.ai" }
]
dependencies = [
    "tqdm>=4.64.1",
    "pdf2image>=1.16.0",
    "pillow>=9.1.0",
    "networkx[default]>=2.8.8",
    "tabulate>=0.9.0",
    "click>=8.0.0",
    "poppler-utils>=0.1.0",
    "docile>=0.0.2",
    "ipywidgets>=8.1.8",
    "plotly>=6.6.0",
    "nbformat>=5.10.4",
]
 
[project.optional-dependencies]
interactive = [
    "jupyterlab>=3.5.0",
    "ipywidgets>=8.0.4",
    "plotly>=5.12.0",
]
ocr = [
    "python-doctr>=0.6.0",
    "torch>=1.13.1",
    "torchvision>=0.14.1",
    "opencv-python>=4.6.0.66",
]
 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.hatch.build.targets.wheel]
packages = ["docile"]
 
[tool.uv]
managed = true
